# rosbot-puck-sorter

./: .gitignore  README.md  aruco_live_reader.py
arduino/gripper_rosserial/: gripper_rosserial.ino
arduino/gripper_serial_bridge/: gripper_serial_bridge.ino
rosbot_puck_sorter/: CMakeLists.txt  README.md  package.xml
rosbot_puck_sorter/action/: PickAndPlace.action
rosbot_puck_sorter/config/: challenge_manager.yaml  common.yaml  coverage_search.yaml  fine_align_controller.yaml  gripper.yaml  homes.yaml  mission_manager.yaml  pick_place_server.yaml  puck_color_hsv.yaml  puck_world_model.yaml  qr_home_mapper.yaml  rgbd_puck_detector.yaml  search_waypoints.yaml  semantic_map.yaml  start_frame.yaml  startup_survey.yaml  twist_mux.yaml
rosbot_puck_sorter/launch/: bringup.launch  challenge.launch  mission.launch
rosbot_puck_sorter/msg/: HomeBase.msg  HomeBaseArray.msg  MissionState.msg  PuckDetection.msg  PuckDetectionArray.msg  PuckTrack.msg  PuckTrackArray.msg
rosbot_puck_sorter/scripts/: challenge_manager.py  cmd_vel_dead_reckoner.py  coverage_search.py  detect_pucks.py  detect_pucks_distance.py  exercise1.py  exercise2.py  fine_align_controller.py  follow_red_puck.py  grab_and_deliver.py  grab_red_puck.py  gripper_controller.py  gripper_reset.py  ir_avoidance.py  jose.py  mission_manager.py  my_publisher.py  pick_and_place.py  pick_place_server.py  puck_debug.py  puck_world_model.py  qr_home_mapper.py  rgbd_puck_detector.py  save_color_image.py  semantic_grid_mapper.py  simple_camera_sub.py  simple_camera_sub_compressed.py  simple_challenge.py  simple_pose_navigator.py  start_frame_manager.py  startup_survey.py
rosbot_puck_sorter/srv/: ReserveTarget.srv  SetGripper.srv
rosbot_puck_sorter/tests/: common.py  run_module_tests.sh  test_aruco_home_mapper.py  test_aruco_live_camera.py  test_coverage_search.py  test_gripper_controller.py  test_mission_manager.py  test_pick_place_server.py  test_puck_world_model.py  test_rgbd_puck_detector.py  test_semantic_grid_mapper.py  test_start_frame_manager.py
